--- a/AcademicReward/AppShell.xaml
+++ b/AcademicReward/AppShell.xaml
@@ -4,11 +4,31 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:AcademicReward"
+    xmlns:views="clr-namespace:AcademicReward.Views"
     Shell.FlyoutBehavior="Disabled">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <ShellContent 
+        Title="Login"
+        ContentTemplate="{DataTemplate views:LoginPage}"
+        Route="LoginPage"
+        Shell.TabBarIsVisible="False"/>
 
+    <TabBar>
+        <Tab Title="Home">
+            <ShellContent Title="Home" ContentTemplate="{DataTemplate views:HomePage}" Route="HomePage" />
+        </Tab>
+        <!-- Will need to investigate how to change tabs depending on user type (memeber/admin) -->
+        <!-- <Tab Title="Notification">
+            <ShellContent ContentTemplate="{DataTemplate views:NotificationPage}" Route="NotificationPage"/>
+        </Tab> -->
+        <Tab Title="Task">
+            <ShellContent Title="Task" ContentTemplate="{DataTemplate views:TaskPage}" Route="TaskPage"/>
+        </Tab>
+        <Tab Title="Shop">
+            <ShellContent Title="Shop" ContentTemplate="{DataTemplate views:ShopPage}" Route="ShopPage"/>
+        </Tab>
+        <Tab Title="Profile">
+            <ShellContent Title="Profile" ContentTemplate="{DataTemplate views:ProfilePage}" Route="ProfilePage"/>
+        </Tab>
+    </TabBar>
 </Shell>
