--- a/AcademicReward/Views/ProfilePage.xaml
+++ b/AcademicReward/Views/ProfilePage.xaml
@@ -4,10 +4,40 @@
              x:Class="AcademicReward.Views.ProfilePage"
              Title="Profile">
     <VerticalStackLayout>
-        <Label 
-            Text="Profile Page Goes Here..."
-            FontSize="50"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <StackLayout Orientation="Horizontal" Margin="0, 10">
+            <StackLayout Orientation="Vertical">
+                <Label Text="Username" FontSize="30" Margin="0, 0, 0, 10" 
+                       VerticalOptions="Center" 
+                       HorizontalOptions="Center"/>
+                <Label Text="Level 1" FontSize="20"/>
+                <Label Text="Experience: 248/500" FontSize="20"/>
+            </StackLayout>
+        </StackLayout>
+
+        <VerticalStackLayout Margin="0, 10" Padding="0,20,0,0">
+            <Button Text="Edit Profile" 
+                    Clicked="ShowEditProfileView" 
+                    VerticalOptions="Center" 
+                    HorizontalOptions="Center"
+                    Margin="0,5,15,0"/>
+
+            <Button Text="History" 
+                    Clicked="ShowHistoryView" 
+                    VerticalOptions="Center" 
+                    HorizontalOptions="Center" 
+                    Margin="0,5,15,0"/>
+
+            <Button Text="Purchase History" 
+                    Clicked="ShowPurchaseHistoryView" 
+                    VerticalOptions="Center" 
+                    HorizontalOptions="Center" 
+                    Margin="0,5,15,0"/>
+
+            <Button Text="Groups" 
+                    Clicked="ShowGroupsView" 
+                    VerticalOptions="Center" 
+                    HorizontalOptions="Center"
+                    Margin="0,5,15,0"/>
+        </VerticalStackLayout>
     </VerticalStackLayout>
 </ContentPage>
