--- a/AcademicReward/PopUps/AddNotificationPopUp.xaml
+++ b/AcademicReward/PopUps/AddNotificationPopUp.xaml
@@ -2,9 +2,81 @@
                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
                xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit" 
                x:Class="AcademicReward.PopUps.AddNotificationPopUp">
-    <StackLayout>
-        <Label Text="This is a very important message!"/>
-        <Button Text="CREATE" Clicked="CreateNotificationButtonClicked"/>
+    <StackLayout Margin="25">
+        <StackLayout Orientation="Horizontal" Margin="0, 20">
+            <Button
+                Text="&lt;"
+                Clicked="BackButtonClicked"
+                FontAttributes="Bold"
+                FontSize="25"
+                Background="Gray"
+                BorderColor="Black"
+                BorderWidth="2"
+                CornerRadius="0"
+                VerticalOptions="Start"
+                HorizontalOptions="Start"
+                Padding="12, 5"
+                Margin="10, 0"/>
+            <Frame BorderColor="Gray" CornerRadius="0" VerticalOptions="Center" HorizontalOptions="StartAndExpand">
+                <Label
+                    Text="Create Notification"
+                    FontSize="50"
+                    FontAttributes="Bold"
+                    VerticalOptions="Center"/>
+            </Frame>
+        </StackLayout>
+        <StackLayout Margin="10">
+            <Label
+                Text="Title: "
+                FontSize="20"
+                Margin="0, 5"
+                FontAttributes="Bold"
+                VerticalOptions="Center"/>
+            <Frame BackgroundColor="White" BorderColor="Gray" CornerRadius="0" Margin="0, 5">
+                <Entry FontSize="20" Placeholder="Title Goes Here..."/>
+            </Frame>
+            <Label
+                Text="Description: "
+                FontSize="20"
+                Margin="0, 5"
+                FontAttributes="Bold"
+                VerticalOptions="Center"/>
+            <Frame BackgroundColor="White" BorderColor="Gray" CornerRadius="0" Margin="0, 5">
+                <Entry FontSize="20" Placeholder="Description Goes Here..."/>
+            </Frame>
+            <Label
+                Text="Group: "
+                FontSize="20"
+                Margin="0, 5"
+                FontAttributes="Bold"
+                VerticalOptions="Center"/>
+            <Frame BackgroundColor="White" BorderColor="Gray" CornerRadius="0" Margin="0, 5">
+                <Picker Title="Select A Group..." x:Name="GroupPicker" FontSize="20">
+                    <Picker.ItemsSource>
+                        <x:Array Type="{x:Type x:String}">
+                            <x:String>Group 1</x:String>
+                            <x:String>Group 2</x:String>
+                            <x:String>Group 3</x:String>
+                            <x:String>Group 4</x:String>
+                            <x:String>Group 5</x:String>
+                            <x:String>Group 6</x:String>
+                            <x:String>Group 7</x:String>
+                            <x:String>Group 8</x:String>
+                        </x:Array>
+                    </Picker.ItemsSource>
+                </Picker>
+            </Frame>
+        </StackLayout>
+        <StackLayout VerticalOptions="EndAndExpand" HorizontalOptions="Center" Margin="10">
+            <Button 
+                Text="CREATE" 
+                Clicked="CreateNotificationButtonClicked"
+                FontSize="25"
+                Background="Gray"
+                BorderColor="Black"
+                BorderWidth="2"
+                CornerRadius="0"/>
+        </StackLayout>
     </StackLayout>
-    
 </toolkit:Popup>
+    
