--- a/AcademicReward/Views/EditProfilePage.xaml
+++ b/AcademicReward/Views/EditProfilePage.xaml
@@ -2,11 +2,12 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AcademicReward.Views.EditProfilePage"
-             Title="NewPage1">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="Edit Profile">
+
+    <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+        <Entry Placeholder="New Username" />
+        <Entry Placeholder="New Password" />
+        <Button Text="Save" />
+    </StackLayout>
+    
 </ContentPage>
