--- a/AcademicReward/Views/HistoryPage.xaml
+++ b/AcademicReward/Views/HistoryPage.xaml
@@ -2,11 +2,16 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AcademicReward.Views.HistoryPage"
-             Title="HistoryPage">
+             Title="History">
+
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <ListView x:Name="HistoryItemsLV" ItemsSource="{Binding HistoryItems}" VerticalOptions="Center">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextCell Text="{Binding Name}" Detail="{Binding Description}" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
     </VerticalStackLayout>
+
 </ContentPage>
