--- a/AcademicReward/Views/GroupsPage.xaml
+++ b/AcademicReward/Views/GroupsPage.xaml
@@ -2,11 +2,16 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AcademicReward.Views.GroupsPage"
-             Title="GroupsPage">
+             Title="Your Groups">
+
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <ListView x:Name="GroupsLV" ItemsSource="{Binding Groups}" VerticalOptions="Center">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Button Text="{Binding Name}" Command="{Binding Path=BindingContext.SelectGroupCommand, Source={x:Reference Name=GroupsPage}}" CommandParameter="{Binding .}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </VerticalStackLayout>
+
 </ContentPage>
