--- a/AcademicReward/Views/CreateGroupPage.xaml
+++ b/AcademicReward/Views/CreateGroupPage.xaml
@@ -3,10 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AcademicReward.Views.CreateGroupPage"
              Title="Create Group">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+   
+    <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+            <Label Text="Group Name" FontSize="Large" />
+            <Entry Placeholder="Eg. Group 1" />
+
+            <Label Text="Description" FontSize="Large" />
+            <Entry Placeholder="Eg. This is a sample group" />
+
+            <Button Text="Create Group" />
+        </StackLayout>
+
 </ContentPage>
