--- a/AcademicReward/Views/GroupPage.xaml
+++ b/AcademicReward/Views/GroupPage.xaml
@@ -4,9 +4,40 @@
              x:Class="AcademicReward.Views.GroupPage"
              Title="Group">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
+        <Label
+            FontSize="Large"
+            Text="Example Group Name"
+            VerticalOptions="Center"
             HorizontalOptions="Center" />
+        <Label
+            FontSize="Medium"
+            Text="This is where the description will go"
+            VerticalOptions="Center"
+            HorizontalOptions="Center"
+            Margin="20,20,20,20"/>
+
+        <Label
+            FontSize="Medium"
+            Text="Members:"
+            VerticalOptions="Center"
+            HorizontalOptions="Center"
+            Margin="20,20,20,20"/>
+        <ListView
+            x:Name="MembersLV"
+            ItemsSource="{Binding Members}"
+            VerticalOptions="Center"
+            HorizontalOptions="Center">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Label
+                            FontSize="Large"
+                            Text="{Binding Name}"
+                            VerticalOptions="Center"
+                            HorizontalOptions="Center" />
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </VerticalStackLayout>
 </ContentPage>
